2005-03-20  John Luke  <john.luke@gmail.com>

	* CSharpBindingCompilerManager.cs: display warning on invalid
	reference lookup, partial fix for bug #70645

2005-03-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Parser/Resolver.cs: Track api changes.

2005-02-16  Ben Motmans  <ben.motmans@gmail.com>

	* ConsoleProject.xpt.xml:
	* CSharpSessionStateWebService.xpt.xml:
	* CSharpWebService.xpt.xml:
	* Library.xpt.xml:
	Consistent naming

	* GladeSharp2Project.xpt.xml:
	* GnomeSharp2Project.xpt.xml:
	* GtkSharp2Project.xpt.xml:
	* CSharpBinding.addin.xml:
	* Makefile.am:
	Added templates

2005-02-18  John Luke  <john.luke@gmail.com>

	* CSharpCompilerManager.cs: pass /optimize if enabled

2005-02-05  John Luke  <john.luke@gmail.com>

	* Gui/CodeGenerationPanel.cs: enable doc generation

2005-02-01  John Luke  <john.luke@gmail.com>

	* Parser/Parser.cs: use ErrorInfo

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Resolver.cs (IsAccessible):
	internal should return true
	fixes bug# 60526

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Resolver.cs: remove incorrect special case
	for properties that made them visible to completion
	incorrectly on static to instance and vice-versa
	fixes bug# 69741

2005-01-28  John Luke  <john.luke@gmail.com>

	* Parser/Parser.cs: update to CanParse
	* Parser/*.cs: update some minor fixes from SD

2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharpBindingCompilerManager.cs:
	* Parser/CSharpVisitor.cs:
	* Parser/Resolver.cs:
	* FormattingStrategy/CSharpFormattingStrategy.cs: comment out
	some unused lines that produced warnings

2005-01-27  John Luke  <john.luke@gmail.com>

	* CSharp.glade: update to new glade format
	* Gui/CodeGenerationPanel.cs:
	* CSharp.glade: use ComboBox instead of OptionMenu

2005-01-26  John Luke  <john.luke@gmail.com>

	* templates/GtkSharpProject.xpt.xml
	* templates/GnomeSharpProgram.xft.xml
	* templates/GladeSharpProject.xpt.xml: clean up,
	consistent naming, spacing, tabbing
